replicated app in frontend. Added gateway. Docker compose for gateway+frontend+end. Added MCP tools to end.